--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <li><a class="nav-link scrollto" href="#about">Sobre Mi</a></li>
                     <li><a class="nav-link scrollto" href="#services">Experiencia</a></li>
                     <li><a class="nav-link scrollto" href="#study">Formación</a></li>
-                    <li><a class="nav-link scrollto " href="#work">Trabajos</a></li>
+                    <li><a class="nav-link scrollto " href="#work">Proyectos</a></li>
                     <li><a class="nav-link scrollto" href="#contact">Contacto</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
@@ -85,7 +85,7 @@
                                                 <p><span class="title-s">Nombre: </span> <span>Arturo Grottoli</span>
                                                 </p>
                                                 <p><span class="title-s">Perfil: </span> <span>Profesional de sistemas y
-                                                        telecomunicaciones</span></p>
+                                                        telecomunicaciones, desarrollador Front-end.</span></p>
                                                 <p><span class="title-s">Email: </span>
                                                     <span>arturogrottoli@gmail.com</span>
                                                 </p>
@@ -269,7 +269,8 @@
                                                                     <ul>
                                                                         <li>2021-CURSOS CODO A CODO FULLSTACK PYTHON
                                                                         </li>
-                                                                        <li>2021-CURSOS JAVASCRIPT Y REACTJS CODERHOUSE
+                                                                        <li>2021-CURSOS JAVASCRIPT, REACTJS Y SQL
+                                                                            CODERHOUSE
                                                                         </li>
                                                                         <li>2021-CURSO DE TESTING,DEBUGGING MANUAL Y
                                                                             AUTOMATIZADO CON SELENIUM (Udemy)</li>
@@ -287,7 +288,6 @@
                                                                     <h4>Idiomas</h4>
                                                                     <ul>
                                                                         <li>Inglés, avanzado.</li>
-                                                                        <li>Portugues, principiante. </li>
 
                                                                     </ul>
                                                                 </div>
@@ -342,7 +342,7 @@
                                         <div class="col-sm-8 ">
                                             <h2 class="w-title ">Tienda Online</h2>
                                             <div class="w-more ">
-                                                <span class="w-ctegory ">Web Design</span> / <span class="w-date ">Nov
+                                                <span class="w-ctegory ">Web Design</span> / <span class="w-date ">Dic
                                                     2021</span>
                                                 <h6>Ecommerce de diversos productos, creado con ReactJs, utilizando
                                                     Bootstrap, API y
@@ -360,6 +360,35 @@
                             </div>
                         </div>
 
+                        <div class="col-md-4 ">
+                            <div class="work-box ">
+                                <a href="assets/img/fondoVAR.png" data-gallery="portfolioGallery "
+                                    class="portfolio-lightbox ">
+                                    <div class="work-img ">
+                                        <img src="assets/img/fondoVAR.png" alt="Reftel" class="img-fluid ">
+                                    </div>
+                                </a>
+                                <div class="work-content ">
+                                    <div class="row ">
+                                        <div class="col-sm-8 ">
+                                            <h2 class="w-title ">Reftel Comunicaciones</h2>
+                                            <div class="w-more ">
+                                                <span class="w-ctegory ">Web Design</span> / <span class="w-date ">Nov
+                                                    2021</span>
+                                                <h6>Sitio web de la empresa Reftel Comunicaciones. Se utiliza
+                                                    HTML, CSS, JS y Bootstrap.</h6>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-4 ">
+                                            <div class="w-like ">
+                                                <a href="http://reftelcomunicaciones.com/"> <span
+                                                        class="bi bi-plus-circle "></span></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
 
                         <div class="col-md-4 ">
                             <div class="work-box ">
@@ -448,6 +477,7 @@
                                 </div>
                             </div>
                         </div>
+
                         <div class="col-md-4 ">
                             <div class="work-box ">
                                 <a href="assets/img/cerveza.jpg" data-gallery="portfolioGallery "
@@ -490,7 +520,7 @@
                                         <div class="col-sm-8 ">
                                             <h2 class="w-title ">Rock News</h2>
                                             <div class="w-more ">
-                                                <span class="w-ctegory ">Web Design</span> / <span class="w-date ">Jul
+                                                <span class="w-ctegory ">Web Design</span> / <span class="w-date ">Jun
                                                     2021</span>
                                                 <h6>Portal de noticias de música.HTML, CSS, JS y Bootstrap. Proyecto
                                                     realizado
@@ -561,7 +591,9 @@
                                                                                 placeholder="Mensaje "
                                                                                 required></textarea>
                                                                         </div>
+                                                                        <br>
                                                                     </div>
+
                                                                     <div class="col-md-12 text-center ">
                                                                         <button type="submit " id="submit"
                                                                             class=" button button-a button-big button-rouded ">Enviar
