--- a/index.html
+++ b/index.html
@@ -95,17 +95,37 @@
                                     </div>
                                     <div class="skill-mf">
                                         <p class="title-s">Skills</p>
-                                        <span>HTML</span> <span class="pull-right">85%</span>
+                                        <span>HTML</span> <span class="pull-right">90%</span>
                                         <div class="progress">
                                             <div class="progress-bar" role="progressbar" style="width: 85%;"
-                                                aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                                                aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                                         </div>
-                                        <span>CSS</span> <span class="pull-right">75%</span>
+                                        <span>CSS</span> <span class="pull-right">85%</span>
                                         <div class="progress">
                                             <div class="progress-bar" role="progressbar" style="width: 75%"
-                                                aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                                                aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                                         </div>
-                                        <span>JAVASCRIPT</span> <span class="pull-right">75%</span>
+                                        <span>JAVASCRIPT</span> <span class="pull-right">80%</span>
+                                        <div class="progress">
+                                            <div class="progress-bar" role="progressbar" style="width: 75%"
+                                                aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                                        </div>
+                                        <span>BOOTSTRAP</span> <span class="pull-right">80%</span>
+                                        <div class="progress">
+                                            <div class="progress-bar" role="progressbar" style="width: 75%"
+                                                aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                                        </div>
+                                        <span>REACTJS</span> <span class="pull-right">80%</span>
+                                        <div class="progress">
+                                            <div class="progress-bar" role="progressbar" style="width: 75%"
+                                                aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                                        </div>
+                                        <span>PYTHON</span> <span class="pull-right">65%</span>
+                                        <div class="progress">
+                                            <div class="progress-bar" role="progressbar" style="width: 75%"
+                                                aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+                                        </div>
+                                        <span>SQL</span> <span class="pull-right">75%</span>
                                         <div class="progress">
                                             <div class="progress-bar" role="progressbar" style="width: 75%"
                                                 aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
@@ -120,14 +140,20 @@
                                             </h5>
                                         </div>
                                         <p class="lead">
+                                            Trabajé muchos años en el rubro de las telecomunicaciones y ahora busco un
+                                            cambio profesional, insertarme en el mundo IT.
+                                        </p>
+                                        <p class="lead">
+                                            Además de ser PM, soy tutor en cursos de ReactJS en CoderHouse. Es una
+                                            manera de transmitir y afianzar los conocimientos adquiridos en los
+                                            diferentes cursos realizados.
+                                        </p>
+                                        <p class="lead">
                                             Soy una persona proactiva a la que le gusta trabajar en equipo. Busco
                                             ingresar en una empresa la cual me permita desarrolarme de manera
                                             profesional afrontando nuevos desafíos.
                                         </p>
-                                        <p class="lead">
-                                            Trabaje muchos años en el rubro de las telecomunicaciones y ahora busco un
-                                            cambio profesional, insertarme en el mundo IT.
-                                        </p>
+
                                         <p class="lead">
                                             Actualmente me encuentro cursando las ultimas materias de la carrera
                                             Ingeniería Electrónica con orientación a los sistemas digitales y
@@ -199,6 +225,7 @@
                             <div class="service-content">
                                 <h2 class="s-title">Docente</h2>
                                 <p class="s-description text-center">
+                                    CODERHOUSE-
                                     FREELANCE O PARTICULAR
                                 </p>
                             </div>
@@ -329,6 +356,36 @@
 
 
                     <div class="row">
+
+                        <div class="col-md-4 ">
+                            <div class="work-box ">
+                                <a href="assets/img/fondoVAR.png" data-gallery="portfolioGallery "
+                                    class="portfolio-lightbox ">
+                                    <div class="work-img ">
+                                        <img src="assets/img/fondoVAR.png" alt="Reftel" class="img-fluid ">
+                                    </div>
+                                </a>
+                                <div class="work-content ">
+                                    <div class="row ">
+                                        <div class="col-sm-8 ">
+                                            <h2 class="w-title ">Reftel Comunicaciones</h2>
+                                            <div class="w-more ">
+                                                <span class="w-ctegory ">Web Design</span> / <span class="w-date ">Dic
+                                                    2021</span>
+                                                <h6>Sitio web de la empresa Reftel Comunicaciones. Se utiliza
+                                                    HTML, CSS, JS y Bootstrap.</h6>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-4 ">
+                                            <div class="w-like ">
+                                                <a href="http://reftelcomunicaciones.com/"> <span
+                                                        class="bi bi-plus-circle "></span></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                         <div class="col-md-4 ">
                             <div class="work-box ">
                                 <a href="assets/img/tienda.jpg" data-gallery="portfolioGallery "
@@ -342,7 +399,7 @@
                                         <div class="col-sm-8 ">
                                             <h2 class="w-title ">Tienda Online</h2>
                                             <div class="w-more ">
-                                                <span class="w-ctegory ">Web Design</span> / <span class="w-date ">Dic
+                                                <span class="w-ctegory ">Web Design</span> / <span class="w-date ">Nov
                                                     2021</span>
                                                 <h6>Ecommerce de diversos productos, creado con ReactJs, utilizando
                                                     Bootstrap, API y
@@ -360,28 +417,31 @@
                             </div>
                         </div>
 
+
+
+
                         <div class="col-md-4 ">
                             <div class="work-box ">
-                                <a href="assets/img/fondoVAR.png" data-gallery="portfolioGallery "
+                                <a href="assets/img/coleccion.jpeg" data-gallery="portfolioGallery "
                                     class="portfolio-lightbox ">
                                     <div class="work-img ">
-                                        <img src="assets/img/fondoVAR.png" alt="Reftel" class="img-fluid ">
+                                        <img src="assets/img/coleccion.jpeg" alt="Mija" class="img-fluid ">
                                     </div>
                                 </a>
                                 <div class="work-content ">
                                     <div class="row ">
                                         <div class="col-sm-8 ">
-                                            <h2 class="w-title ">Reftel Comunicaciones</h2>
+                                            <h2 class="w-title ">Mija Productos</h2>
                                             <div class="w-more ">
-                                                <span class="w-ctegory ">Web Design</span> / <span class="w-date ">Nov
+                                                <span class="w-ctegory ">Web Design</span> / <span class="w-date ">Oct
                                                     2021</span>
-                                                <h6>Sitio web de la empresa Reftel Comunicaciones. Se utiliza
+                                                <h6>Sitio web del emprendimiento de mochilas para bebes Mija. Se utiliza
                                                     HTML, CSS, JS y Bootstrap.</h6>
                                             </div>
                                         </div>
                                         <div class="col-sm-4 ">
                                             <div class="w-like ">
-                                                <a href="http://reftelcomunicaciones.com/"> <span
+                                                <a href="https://arturogrottoli.github.io/Mija/"> <span
                                                         class="bi bi-plus-circle "></span></a>
                                             </div>
                                         </div>
@@ -403,7 +463,7 @@
                                         <div class="col-sm-8 ">
                                             <h2 class="w-title ">Casacas Fútbol!</h2>
                                             <div class="w-more ">
-                                                <span class="w-ctegory ">Web Design</span> / <span class="w-date ">Oct
+                                                <span class="w-ctegory ">Web Design</span> / <span class="w-date ">Sept
                                                     2021</span>
                                                 <h6>Ecommerce de diversos productos, proyecto final del curso de
                                                     ReactJS CoderHouse.</h6>
@@ -412,35 +472,6 @@
                                         <div class="col-sm-4 ">
                                             <div class="w-like ">
                                                 <a href="https://curved-powder.surge.sh/"> <span
-                                                        class="bi bi-plus-circle "></span></a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4 ">
-                            <div class="work-box ">
-                                <a href="assets/img/coleccion.jpeg" data-gallery="portfolioGallery "
-                                    class="portfolio-lightbox ">
-                                    <div class="work-img ">
-                                        <img src="assets/img/coleccion.jpeg" alt="Mija" class="img-fluid ">
-                                    </div>
-                                </a>
-                                <div class="work-content ">
-                                    <div class="row ">
-                                        <div class="col-sm-8 ">
-                                            <h2 class="w-title ">Mija Productos</h2>
-                                            <div class="w-more ">
-                                                <span class="w-ctegory ">Web Design</span> / <span class="w-date ">Sep
-                                                    2021</span>
-                                                <h6>Sitio web del emprendimiento de mochilas para bebes Mija. Se utiliza
-                                                    HTML, CSS, JS y Bootstrap.</h6>
-                                            </div>
-                                        </div>
-                                        <div class="col-sm-4 ">
-                                            <div class="w-like ">
-                                                <a href="https://arturogrottoli.github.io/Mija/"> <span
                                                         class="bi bi-plus-circle "></span></a>
                                             </div>
                                         </div>
